# SeqOthello

./: CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  build.sh  buildUKYDLX.sh  compile.sh  createToy.sh  genBuildFromJellyfishKmers.sh  genExample.sh  manual.md  rebuild.sh  run.sh  runUKYDLX.sh
docker/: Dockerfile  build_grps.sh  build_grps_grps.sh  build_seqothello.sh  convert_kmer_to_bin_S3.sh  query.sh  runmeasure.py
dockerassets/: BuildWrapper.sh  GroupWrapper.sh  binary_parallel.sh  build_grps.sh  build_grps_grps.sh  compress_aws_kmer.sh  compresult.sh  echo.sh  fetch_and_run.sh  makexml.sh  oneBinaryWrapper.sh
example/: STEP1_Jellyfish.sh  STEP2_Binary.sh  STEP3_Group.sh  STEP_additional_1.sh  STEP_additional_2.sh  STEP_additional_3.sh  build_and_query.sh  experiments_list.10.txt  kmer_list.10.txt  transcripts.fa  transpose.sh
example/fq/: experiment_00.R1.fastq  experiment_00.R2.fastq  experiment_01.R1.fastq  experiment_01.R2.fastq  experiment_02.R1.fastq  experiment_02.R2.fastq  experiment_03.R1.fastq  experiment_03.R2.fastq  experiment_04.R1.fastq  experiment_04.R2.fastq  experiment_05.R1.fastq  experiment_05.R2.fastq  experiment_06.R1.fastq  experiment_06.R2.fastq  experiment_07.R1.fastq  experiment_07.R2.fastq  experiment_08.R1.fastq  experiment_08.R2.fastq  experiment_09.R1.fastq  experiment_09.R2.fastq
lib/: CMakeLists.txt  PracticalSocket.cpp  PracticalSocket.h  args.hxx  socket.cpp  socket.h  threadpool.cpp  threadpool.h  tinyxml2.cpp  tinyxml2.h
scripts_submission/: scripts.tar
seqothlib/: CMakeLists.txt  L1Node.cpp  L1Node.hpp  L2Node.cpp  L2Node.hpp  disjointset.h  filegrouper.hpp  hash.h  io_helper.hpp  jellyfish_helper.hpp  oltnew.h  othello.h  othellotypes.hpp  util.cpp  util.h
src/: CMakeLists.txt  Makefile  Preprocess.cc  build.cc  checktidy.sh  client.cc  group.cc  preprocess.cc  printrates.cc  query.cc  testL1Node.cpp
src/rpc/: CMakeLists.txt  chat_message.hpp  server.cpp
test/: CMakeLists.txt  Makefile  clear.sh  comp.cc  datagen.cc  gendata.sh  test.sh  testTT.fa
test/unit/: CMakeLists.txt  testL1Node.cpp  testL1Node.h  testL2Node.cpp  testL2Node.h
